# SkillFactoryCppCourse

./: .gitignore  CMakeLists.txt  Chat  Chat.cbp  Makefile  README.md  cmake_install.cmake  main.cpp  my_ru.qm  ui_loginform.h  ui_mainwindow.h  ui_registrationform.h  ui_startscreen.h
Chat/: CMakeLists.txt  Makefile  README.md  main  main.cpp  main.out  messages_info.out  messages_info.txt  users_info.txt
Chat/include/: Chat.cpp  Chat.hpp  Logger.cpp  Logger.hpp  Message.cpp  Message.hpp  User.cpp  User.hpp
Chat_autogen/: mocs_compilation.cpp
Chat_autogen/EXY53EAHJJ/: moc_loginform.cpp  moc_mainwindow.cpp  moc_registrationform.cpp  moc_startscreen.cpp
Chat_client/: CMakeLists.txt  README.md  main.cpp
Chat_client/include/: Message.cpp  Message.hpp  common.cpp  common.hpp
Chat_server/: CMakeLists.txt  main.cpp
Chat_server/include/: common.cpp  common.hpp
Electronics_Shop_HA_Module6/include/: mobile_phones.cpp  mobile_phones.hpp  speakers.hpp
HAs/Module16_Project_Chat/: README.md
HAs/Module6_HA_Electronics_Shop/: main.cpp
HAs/Module9_Project_Chat/: main.cpp
Module12_Algorithms_Structures/isKPeriodic/: main.cpp
Module14_HA_TrieDictAutoFill/: main.cpp
Module5_HA_Vending_Machine/: main.cpp
Module5_HA_Vending_Machine/include/: snack.hpp  vending.cpp
Module6_HA_Electronics_Shop/include/: IElectronics.hpp  Yandex_Station.hpp
Module7_HA_Container/: main.cpp
Module7_HA_Container/include/: ArrayContainer.cpp  ArrayContainer.hpp
Module8_HA_Container_template/: main.cpp
Module8_HA_Container_template/include/: ArrayContainer.cpp  ArrayContainer.hpp
Module9_Project_Chat/: README.md  main.cpp
Module9_Project_Chat/include/: Chat.cpp  Chat.hpp  Message.hpp  User.hpp
Template/: main.cpp
Vending_Machine_HA_Module5/: main
include/: Chat.cpp  Chat.hpp  timer.cpp  timer.hpp  vector_func.cpp  vector_func.hpp
sources/: Test.cpp  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
translations/: my_ru.qm  my_ru.ts
users_messages_files/: main.cpp
(+193 files in other folders)
